tests/NormalTests/paczka1/fuzzy1/86686352.err
Error in line 6: 0V1v A387 21,9
Error in line 8: gdS A387 84,3
Error in line 14: gdS A792 28,4
Error in line 9: 0V1v A792 72,9
Error in line 29: ReSJVIk A738 46,8
Error in line 33: gdS A387 59,6
